@@ -25,14 +25,12 @@
         exmpp_client_roster,
         exmpp_client_sasl,
         exmpp_client_session,
-        exmpp_client_stream,
         exmpp_client_tls,
         exmpp_server_binding,
         exmpp_server_compression,
         exmpp_server_legacy_auth,
         exmpp_server_sasl,
         exmpp_server_session,
-        exmpp_server_stream,
         exmpp_server_tls,
         exmpp_callbacks,
         exmpp_session,
